@@ -21,81 +21,78 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
-@EnableMethodSecurity // enables @PreAuthorize
-public class SecurityConfig {
+    @EnableMethodSecurity
+    public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
-    private final RateLimitFilter rateLimitFilter;
-    private final JwtAuthEntryPoint jwtAuthEntryPoint;
+            private final RateLimitFilter rateLimitFilter;
+            private final JwtAuthEntryPoint jwtAuthEntryPoint;
 
     @Value("${app.cors.allowed-origins}")
-    private String allowedOrigins;
+            private String allowedOrigins;
 
     public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter,
-                          RateLimitFilter rateLimitFilter,
-                          JwtAuthEntryPoint jwtAuthEntryPoint) {
-        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
-        this.rateLimitFilter = rateLimitFilter;
-        this.jwtAuthEntryPoint = jwtAuthEntryPoint;
+                                                    RateLimitFilter rateLimitFilter,
+                                                    JwtAuthEntryPoint jwtAuthEntryPoint) {
+                this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+                this.rateLimitFilter = rateLimitFilter;
+                this.jwtAuthEntryPoint = jwtAuthEntryPoint;
     }
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                // Stateless JWT API → CSRF tokens are not applicable; protection comes from
-                // no cookie-based auth + SameSite. Disable the servlet CSRF filter.
-                .csrf(AbstractHttpConfigurer::disable)
-                .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .exceptionHandling(eh -> eh.authenticationEntryPoint(jwtAuthEntryPoint))
-                .authorizeHttpRequests(auth -> auth
-                        // Public
-                        .requestMatchers("/health").permitAll()
-                        .requestMatchers("/auth/**").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/products", "/products/**").permitAll()
-                        .requestMatchers("/uploads/**").permitAll()
-                        .requestMatchers("/h2-console/**").permitAll()
-                        // Admin-only
-                        .requestMatchers("/admin/**").hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.POST, "/products/**").hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.PUT, "/products/**").hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.DELETE, "/products/**").hasRole("ADMIN")
-                        // Authenticated
-                        .anyRequest().authenticated()
-                )
-                // H2 console runs in a frame
-                .headers(headers -> headers.frameOptions(frame -> frame.sameOrigin()));
+            public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+                        http
+                                            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                                            .csrf(AbstractHttpConfigurer::disable)
+                                            .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                                            .exceptionHandling(eh -> eh.authenticationEntryPoint(jwtAuthEntryPoint))
+                                            .authorizeHttpRequests(auth -> auth
+                                                                                           .requestMatchers("/health").permitAll()
+                                                                                           .requestMatchers("/auth/**").permitAll()
+                                                                                           .requestMatchers(HttpMethod.GET, "/products", "/products/**").permitAll()
+                                                                                           .requestMatchers("/uploads/**").permitAll()
+                                                                                           .requestMatchers("/h2-console/**").permitAll()
+                                                                                           .requestMatchers("/admin/**").hasRole("ADMIN")
+                                                                                           .requestMatchers(HttpMethod.POST, "/products/**").hasRole("ADMIN")
+                                                                                           .requestMatchers(HttpMethod.PUT, "/products/**").hasRole("ADMIN")
+                                                                                           .requestMatchers(HttpMethod.DELETE, "/products/**").hasRole("ADMIN")
+                                                                                           .anyRequest().authenticated()
+                                                                                   )
+                                            .headers(headers -> headers.frameOptions(frame -> frame.sameOrigin()));
 
-        http.addFilterBefore(rateLimitFilter, UsernamePasswordAuthenticationFilter.class);
-        http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                http.addFilterBefore(rateLimitFilter, UsernamePasswordAuthenticationFilter.class);
+                        http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
-        return http.build();
-    }
+                return http.build();
+            }
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
-        config.setExposedHeaders(List.of("Authorization"));
-        config.setAllowCredentials(true);
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
-        return source;
-    }
+            public CorsConfigurationSource corsConfigurationSource() {
+                        CorsConfiguration config = new CorsConfiguration();
+                        config.setAllowedOriginPatterns(List.of(
+                                            "https://*.vercel.app",
+                                            "http://localhost:5173",
+                                            "http://localhost:3000"
+                                    ));
+                        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+                        config.setAllowedHeaders(List.of("*"));
+                        config.setExposedHeaders(List.of("Authorization"));
+                        config.setAllowCredentials(true);
+                        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                        source.registerCorsConfiguration("/**", config);
+                        return source;
+            }
 
     @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder(12);
-    }
+            public PasswordEncoder passwordEncoder() {
+                        return new BCryptPasswordEncoder(12);
+            }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
-        return config.getAuthenticationManager();
+            public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+                        return config.getAuthenticationManager();
+            }
     }
-}
